#######################################################################
# v0.13.2 (unreleased)
#######################################################################
Changes/improvements:
- #265: Output from post deploy script should be marked more clearly
- #266: Improve output when deploying PHP CGI config

#######################################################################
# v0.13.1 (2009-09-13)
#######################################################################
Dependency tags are no longer used by default for wadf-reprocess (they are still
used for initial deployment; use "wadf-reprocess --dep-tags" if you want to use
them for reprocessing). Also a major regression was fixed where confusing
behaviour would occur if "**" was used in a macro.

Changes/improvements:
- 254: wadf-reprocess: --no-dep-tags option should be the default
- 245: Bogus dependency warnings on first-time install with dependency tags 
- 257: Improve help output for wadf-deploy to make 'version' syntax clearer
- Use PEAR bug workarounds when installing local SVN checkouts

Bugs fixed:
- 255: Regression: "**" in a macro value does not stop deployment
- 261: wadf-reprocess incorrectly calculates databases forming part of a 
  deployment before switching to new version (if relevant)


#######################################################################
# v0.13.0 (2009-07-28)
#######################################################################
Significant improvements to dependency handling, especially where local
copies of dependencies (e.g. libraries) which are packaged using PEAR
packages are involved. See the new options 'dep_pear_local_package_dirs' and 
'template_exclude_paths' options.

The "--no-db" option to wadf-reprocess has been removed; it is now assumed
that database redeployment is *not* required. Instead, if you want to
redeploy, use "wadf-reprocess --db"

There are also some minor but helpful interface improvements.

New features: