@@ -41,15 +41,14 @@
 
 
 [globals]
-; type of version control system. only svn supported for now.
+; Type of version control system. Only SVN is currently supported.
 vc_type = svn
 
-; module, revision and branch (trunk, named branch) are passed to VC
-; plugin out-of-band
-; (appref is passed as module)
+; module, revision and branch (trunk, named branch) are passed to version
+; control plugin (the 'appref' is passed as module name)
 vc_base = svn+ssh://svn@svn.example.com
 
-; type of webserver. httpd = ASF httpd
+; Type of webserver. httpd = ASF HTTPD
 webserver_type = httpd
 
 ; Type of PHP installation:
